--- a/source/css/_variables.scss
+++ b/source/css/_variables.scss
@@ -77,7 +77,7 @@ $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
 
-$main-color: $cyan - 30%;
+$main-color: $blue - 30%;
 
 
 
@@ -697,16 +697,16 @@ $zindex-tooltip:                    1070 !default;
 // Navs
 
 $nav-link-padding-y:                .5rem !default;
-$nav-link-padding-x:                1rem !default;
+$nav-link-padding-x:                .5rem !default;
 $nav-link-disabled-color:           $gray-600 !default;
 
-$nav-tabs-border-color:             $gray-300 !default;
-$nav-tabs-border-width:             $border-width !default;
+$nav-tabs-border-color:             $main-color !default;
+$nav-tabs-border-width:             1px !default;
 $nav-tabs-border-radius:            $border-radius !default;
-$nav-tabs-link-hover-border-color:  $gray-200 $gray-200 $nav-tabs-border-color !default;
-$nav-tabs-link-active-color:        $gray-700 !default;
-$nav-tabs-link-active-bg:           $body-bg !default;
-$nav-tabs-link-active-border-color: $gray-300 $gray-300 $nav-tabs-link-active-bg !default;
+$nav-tabs-link-hover-border-color:  transparent !default;
+$nav-tabs-link-active-color:        $white !default;
+$nav-tabs-link-active-bg:           $gray-700 !default;
+$nav-tabs-link-active-border-color: transparent !default;
 
 $nav-pills-border-radius:           $border-radius !default;
 $nav-pills-link-active-color:       $component-active-color !default;
