--- a/source/css/bootstrap.css
+++ b/source/css/bootstrap.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #00849a;
+  --primary: #005de1;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -155,13 +155,13 @@ sup {
 }
 
 a {
-  color: #00849a;
+  color: #005de1;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #003d47;
+  color: #003977;
   text-decoration: none;
 }
 
@@ -1700,23 +1700,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b6dde3;
+  background-color: #afd2f7;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #77bfca;
+  border-color: #6babef;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #a4d4dc;
+  background-color: #98c5f5;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #a4d4dc;
+  background-color: #98c5f5;
 }
 
 .table-secondary,
@@ -2017,10 +2017,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #14dfff;
+  border-color: #449eff;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2568,8 +2568,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2583,38 +2583,38 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #005e6d;
-  border-color: #005360;
+  background-color: #004c9d;
+  border-color: #004590;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(32, 150, 169, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(32, 150, 169, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(13, 117, 230, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(13, 117, 230, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #005360;
-  border-color: #004853;
+  background-color: #004590;
+  border-color: #003f83;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(32, 150, 169, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(32, 150, 169, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(13, 117, 230, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(13, 117, 230, 0.5);
 }
 
 .btn-secondary {
@@ -2870,37 +2870,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #00849a;
-  border-color: #00849a;
+  color: #005de1;
+  border-color: #005de1;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #00849a;
+  color: #005de1;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3143,12 +3143,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #00849a;
+  color: #005de1;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #003d47;
+  color: #003977;
   text-decoration: none;
 }
 
@@ -3447,7 +3447,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #00849a;
+  background-color: #005de1;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3835,23 +3835,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #00849a;
-  background-color: #00849a;
+  border-color: #005de1;
+  background-color: #005de1;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #14dfff;
+  border-color: #449eff;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #47e6ff;
-  border-color: #47e6ff;
+  background-color: #77b8ff;
+  border-color: #77b8ff;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -3901,8 +3901,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #00849a;
-  background-color: #00849a;
+  border-color: #005de1;
+  background-color: #005de1;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3910,11 +3910,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 132, 154, 0.5);
+  background-color: rgba(0, 93, 225, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(0, 132, 154, 0.5);
+  background-color: rgba(0, 93, 225, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3926,7 +3926,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 132, 154, 0.5);
+  background-color: rgba(0, 93, 225, 0.5);
 }
 
 .custom-switch {
@@ -3967,7 +3967,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 132, 154, 0.5);
+  background-color: rgba(0, 93, 225, 0.5);
 }
 
 .custom-select {
@@ -3990,10 +3990,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #14dfff;
+  border-color: #449eff;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4050,9 +4050,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #14dfff;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  border-color: #449eff;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4119,16 +4119,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4139,7 +4139,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #00849a;
+  background-color: #005de1;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4158,7 +4158,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #47e6ff;
+  background-color: #77b8ff;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4174,7 +4174,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #00849a;
+  background-color: #005de1;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4193,7 +4193,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #47e6ff;
+  background-color: #77b8ff;
 }
 
 .custom-range::-moz-range-track {
@@ -4212,7 +4212,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #00849a;
+  background-color: #005de1;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4230,7 +4230,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #47e6ff;
+  background-color: #77b8ff;
 }
 
 .custom-range::-ms-track {
@@ -4305,7 +4305,7 @@ input[type="button"].btn-block {
 
 .nav-link {
   display: block;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
 }
 
 .nav-link:hover, .nav-link:focus {
@@ -4319,34 +4319,61 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #dee2e6;
+  background: #ced4da;
+  border-radius: 0.25rem;
+  text-align: center;
+  padding: 0.2rem;
 }
 
 .nav-tabs .nav-item {
-  margin-bottom: -1px;
+  padding: 0;
+  position: relative;
+}
+
+.nav-tabs .nav-item .close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 1rem;
+  height: 1rem;
+  font-size: 1rem;
+  text-shadow: none;
+  color: #343a40;
+  background-color: #fff;
+  border-radius: 50%;
+  opacity: .8;
 }
 
 .nav-tabs .nav-link {
-  border: 1px solid transparent;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+  background: #dee2e6;
+  margin: 0.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  border-radius: 0.25rem;
 }
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef #dee2e6;
+  border-color: transparent;
+  background: #fff;
 }
 
 .nav-tabs .nav-link.disabled {
   color: #6c757d;
-  background-color: transparent;
+  background: #adb5bd;
   border-color: transparent;
 }
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  color: #fff;
+  background-color: #495057;
+  border-color: transparent;
+}
+
+.nav-tabs .nav-link.active + .close {
+  color: #f8f9fa;
+  background: #000;
 }
 
 .nav-tabs .dropdown-menu {
@@ -4362,7 +4389,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #00849a;
+  background-color: #005de1;
 }
 
 .nav-fill .nav-item {
@@ -5162,7 +5189,7 @@ input[type="button"].btn-block {
 
 .page-link:hover {
   z-index: 2;
-  color: #003d47;
+  color: #003977;
   text-decoration: none;
   background-color: #dee2e6;
   border-color: #dee2e6;
@@ -5171,15 +5198,15 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.25);
 }
 
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .page-item.disabled .page-link {
@@ -5266,18 +5293,18 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #00849a;
+  background-color: #005de1;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #005360;
+  background-color: #004590;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 132, 154, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(0, 93, 225, 0.5);
 }
 
 .badge-secondary {
@@ -5440,17 +5467,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #004550;
-  background-color: #cbe6eb;
-  border-color: #b6dde3;
+  color: #003075;
+  background-color: #c6dff9;
+  border-color: #afd2f7;
 }
 
 .alert-primary hr {
-  border-top-color: #a4d4dc;
+  border-top-color: #98c5f5;
 }
 
 .alert-primary .alert-link {
-  color: #001619;
+  color: #001832;
 }
 
 .alert-secondary {
@@ -5594,7 +5621,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #00849a;
+  background-color: #005de1;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5697,8 +5724,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #00849a;
-  border-color: #00849a;
+  background-color: #005de1;
+  border-color: #005de1;
 }
 
 .list-group-horizontal {
@@ -5842,19 +5869,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #004550;
-  background-color: #b6dde3;
+  color: #003075;
+  background-color: #afd2f7;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #004550;
-  background-color: #a4d4dc;
+  color: #003075;
+  background-color: #98c5f5;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #004550;
-  border-color: #004550;
+  background-color: #003075;
+  border-color: #003075;
 }
 
 .list-group-item-secondary {
@@ -6877,13 +6904,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #00849a !important;
+  background-color: #005de1 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #005360 !important;
+  background-color: #004590 !important;
 }
 
 .bg-secondary {
@@ -7005,7 +7032,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #00849a !important;
+  border-color: #005de1 !important;
 }
 
 .border-secondary {
@@ -10349,11 +10376,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #00849a !important;
+  color: #005de1 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #003d47 !important;
+  color: #003977 !important;
 }
 
 .text-secondary {
