--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,3 +1,4 @@
+@import url(d:\[ Coding ]\infoCMS\source\css\jquery.scrolling-tabs.css);
 @font-face {
   font-family: 'NanumSquare';
   font-weight: 400;
@@ -10898,69 +10899,6 @@ a.text-dark:hover, a.text-dark:focus {
   border-radius: 0.25rem;
 }
 
-.nav-tabs2 {
-  border-bottom: none;
-  padding: 0.42857rem 0.21429rem 0;
-}
-
-@media (min-width: 1200px) {
-  .nav-tabs2 {
-    padding: 8px 10px 0;
-  }
-}
-
-.nav-tabs2 .nav-item {
-  position: relative;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-tabs2 .nav-link {
-  border: none;
-  background: #6c757d;
-  color: #adb5bd;
-  margin: 0 0.21429rem 0;
-  border-radius: 0.25rem;
-  margin: 0 0.21429rem 0.42857rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-@media (min-width: 1200px) {
-  .nav-tabs2 .nav-link {
-    border-radius: 1.14286rem 0.57143rem 0 0;
-    margin: 0 3px 0;
-  }
-}
-
-.nav-tabs2 .nav-link:hover, .nav-tabs2 .nav-link:focus {
-  border-color: #e9ecef #e9ecef #dee2e6;
-}
-
-.nav-tabs2 .nav-link.disabled {
-  color: #6c757d;
-  background-color: #ced4da;
-}
-
-.nav-tabs2 .close {
-  font-size: 1rem;
-  position: absolute;
-  right: 0.5rem;
-  top: 0.14286rem;
-  text-shadow: none;
-}
-
-.nav-tabs2 .nav-link.active,
-.nav-tabs2 .nav-item.show .nav-link {
-  color: #212529;
-  background-color: #e9ecef;
-}
-
-.nav-tabs2 .nav-link.active + .close {
-  color: #6c757d;
-}
-
 .container {
   width: 100%;
   padding-right: 8px;
@@ -12252,10 +12190,6 @@ body.cmsLogin form.form-signin div.row .invalid-feedback {
   text-align: left;
 }
 
-body.cmsMain {
-  background: #e9ecef;
-}
-
 body.cmsMain::before {
   content: "";
   position: fixed;
@@ -12680,7 +12614,7 @@ body.cmsMain div#content {
   position: relative;
   margin-top: 3.57143rem;
   font-size: 0.78571rem;
-  padding: 1.42857rem 0 0.71429rem;
+  padding: 0 0 0.71429rem;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -12690,33 +12624,112 @@ body.cmsMain div#content {
     width: calc(100% - 240px);
     vertical-align: top;
     font-size: 14px;
-    padding: 30px 10px;
+    padding: 0 10px 30px;
   }
 }
 
 body.cmsMain div#content section.tabs {
   position: relative;
-  padding: 0;
-  top: -1.42857rem;
-  margin: 0 0 -0.71429rem;
-  background: #adb5bd;
+  padding: 0.71429rem 0.35714rem 0 0.71429rem;
+  top: 0;
+  margin: 0 0 1.42857rem;
+  background: #dee2e6;
+  font-size: 0;
 }
 
-@media only screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
   body.cmsMain div#content section.tabs {
-    font-size: 16px;
-    top: -30px;
-    margin: 0 -10px -10px;
+    top: 0;
+    margin: 0 -10px 20px;
+    padding: 10px 10px 0;
   }
 }
 
-body.cmsMain div#content section.tabs div.btn-set {
+body.cmsMain div#content section.tabs div.slick-tabs {
+  overflow: hidden;
+}
+
+body.cmsMain div#content section.tabs div.slick-tabs div.item {
+  position: relative;
+  display: inline-block;
+  width: calc((100% - 1.42857rem) / 4);
+  margin: 0 0.35714rem 0 0;
+}
+
+@media (min-width: 1200px) {
+  body.cmsMain div#content section.tabs div.slick-tabs div.item {
+    width: auto;
+    margin: 0 5px 0 0;
+  }
+}
+
+body.cmsMain div#content section.tabs div.slick-tabs div.item a {
+  display: block;
+  border-radius: 0.35714rem 0.35714rem 0 0;
+  background: #ced4da;
+  line-height: 2.71429rem;
+  font-size: 0.85714rem;
+  padding: 0 0.71429rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  outline: none;
+}
+
+@media (min-width: 1200px) {
+  body.cmsMain div#content section.tabs div.slick-tabs div.item a {
+    font-size: 16px;
+    border-radius: 5px 5px 0 0;
+  }
+}
+
+body.cmsMain div#content section.tabs div.slick-tabs div.item a:hover {
+  color: #000;
+}
+
+body.cmsMain div#content section.tabs div.slick-tabs div.item button.close {
   position: absolute;
+  right: 0.35714rem;
+  top: 0.21429rem;
+  font-size: 1rem;
+}
+
+body.cmsMain div#content section.tabs div.slick-tabs div.item.slick-current a {
+  background: #fff;
+}
+
+body.cmsMain div#content section.tabs div.btn-set {
+  font-size: 0;
+  text-align: center;
+  position: absolute;
+  z-index: 1300;
   display: inline-block;
   right: 0;
   top: 0;
-  background-color: rgba(222, 226, 230, 0.2);
-  background: -o-linear-gradient(left, rgba(222, 226, 230, 0.2), rgba(222, 226, 230, 0.2), #dee2e6);
+  bottom: 0;
+  text-align: right;
+  background-color: rgba(173, 181, 189, 0);
+  background: -webkit-linear-gradient(left, rgba(173, 181, 189, 0), #495057, #495057);
+}
+
+body.cmsMain div#content section.tabs div.btn-set button {
+  margin: 0.57143rem 0 1.14286rem 0.14286rem;
+  border: none;
+  background: #212529;
+  color: #f8f9fa;
+  padding: 0.71429rem 0.42857rem;
+  border-radius: 0.25rem;
+}
+
+@media (min-width: 1200px) {
+  body.cmsMain div#content section.tabs div.btn-set button {
+    margin: 10px 0 16px 2px;
+    padding: 10px 6px;
+  }
+}
+
+body.cmsMain div#content section.tabs div.btn-set button i {
+  font-size: 0.85714rem;
 }
 
 body.cmsMain div#content section.view {
@@ -12752,6 +12765,10 @@ body.cmsMain div#content section.view h2.sTitle i {
     right: 8px;
     top: 8px;
   }
+}
+
+body.cmsMain div#content section.view nav.navigation .breadcrumb {
+  background-color: #fff !important;
 }
 
 body.cmsMain div#content section.view nav.navigation .icon {
@@ -12807,6 +12824,7 @@ body.cmsMain div#content section.view div.contentsArea .widget {
   width: 100%;
   border-radius: 0.25rem;
   overflow: hidden;
+  border: 1px solid #dee2e6;
   margin: 0 0 0.71429rem;
   padding: 0;
 }
@@ -13057,7 +13075,7 @@ body.cmsMain.menuToggle header button.menu i.bar:first-of-type {
 
 @media only screen and (min-width: 1200px) {
   body.cmsMain.menuToggle header button.menu i.bar:first-of-type {
-    top: 41%;
+    top: 40%;
   }
 }
 
@@ -13075,7 +13093,7 @@ body.cmsMain.menuToggle header button.menu i.bar:last-of-type {
 
 @media only screen and (min-width: 1200px) {
   body.cmsMain.menuToggle header button.menu i.bar:last-of-type {
-    top: 54%;
+    top: 55%;
   }
 }
 
